--- a/Home.css
+++ b/Home.css
@@ -210,7 +210,7 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 1432px;
+  min-height: 2213px;
 }
 
 .u-section-2 .u-text-1 {
@@ -270,50 +270,57 @@
 }
 
 .u-section-2 .u-text-6 {
-  width: 272px;
-  margin: -137px auto 0;
-}
-
-.u-section-2 .u-text-7 {
   font-weight: 400;
   font-size: 0.875rem;
   margin: -149px 305px 60px -305px;
 }
 
-@media (max-width: 1199px) {
-  .u-section-2 .u-text-2 {
-    margin-top: 11px;
-  }
+.u-section-2 .u-group-1 {
+  height: 87px;
+  margin-top: -728px;
+  margin-bottom: 60px;
+}
 
+.u-section-2 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-2 .u-text-7 {
+  font-weight: 400;
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 0.625rem;
+}
+
+@media (max-width: 1199px) {
   .u-section-2 .u-text-3 {
-    margin-top: 42px;
+    margin-top: 20px;
+    margin-bottom: initial;
   }
 
   .u-section-2 .u-text-4 {
-    margin-top: -75px;
+    margin-top: 20px;
+    margin-bottom: initial;
   }
 
   .u-section-2 .u-text-5 {
-    margin-top: 20px;
     margin-right: 42px;
     margin-left: 664px;
   }
 
   .u-section-2 .u-text-6 {
-    margin-top: -328px;
-  }
-
-  .u-section-2 .u-text-7 {
+    margin-top: 20px;
     margin-right: 0;
     margin-left: 0;
+    margin-bottom: initial;
+  }
+
+  .u-section-2 .u-group-1 {
+    height: auto;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 1899px;
-  }
-
   .u-section-2 .u-gallery-1 {
     height: 753px;
     width: 720px;
@@ -323,17 +330,25 @@
     grid-template-columns: repeat(2, auto);
   }
 
+  .u-section-2 .u-text-3 {
+    margin-bottom: 0;
+  }
+
+  .u-section-2 .u-text-4 {
+    margin-bottom: 0;
+  }
+
   .u-section-2 .u-text-5 {
     margin-right: 0;
     margin-left: 486px;
   }
+
+  .u-section-2 .u-text-6 {
+    margin-bottom: 60px;
+  }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 2840px;
-  }
-
   .u-section-2 .u-gallery-1 {
     height: 1694px;
     width: 540px;
@@ -349,24 +364,49 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 2213px;
-  }
-
   .u-section-2 .u-gallery-1 {
     height: 1067px;
-    width: 340px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-2 .u-text-2 {
-    margin-right: 108px;
+    width: 184px;
+    margin-top: 0;
+    margin-right: auto;
+  }
+
+  .u-section-2 .u-text-3 {
+    width: auto;
+    margin-top: -402px;
+    margin-left: 27px;
+    margin-right: 27px;
   }
 
   .u-section-2 .u-text-4 {
-    margin-left: 101px;
+    width: auto;
+    margin-top: -403px;
+    margin-left: auto;
   }
 
   .u-section-2 .u-text-5 {
-    margin-left: 106px;
+    font-size: 0.625rem;
+    width: 253px;
+    margin-top: 768px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-2 .u-text-6 {
+    font-size: 0.625rem;
+    width: auto;
+    margin-top: -819px;
+    margin-bottom: 0;
+  }
+
+  .u-section-2 .u-group-1 {
+    margin-top: 356px;
+    min-height: 120px;
   }
 }
