--- a/Home.css
+++ b/Home.css
@@ -186,6 +186,10 @@
     width: calc(((100% - 340px) / 2) + 340px);
   }
 
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 516px;
+  }
+
   .u-section-1 .u-image-1 {
     height: 123px;
     margin-right: initial;
@@ -199,11 +203,30 @@
 
   .u-section-1 .u-text-2 {
     font-size: 1.875rem;
+    width: auto;
+    margin-top: 187px;
+    margin-right: -41px;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-top: 30px;
+    margin-right: -26px;
+    margin-left: 26px;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 494px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: -13px;
   }
 
   .u-section-1 .u-image-2 {
     width: 320px;
     height: 134px;
+    margin-top: 123px;
   }
 } .u-section-2 {
   background-image: none;
@@ -295,12 +318,10 @@
 @media (max-width: 1199px) {
   .u-section-2 .u-text-3 {
     margin-top: 20px;
-    margin-bottom: initial;
   }
 
   .u-section-2 .u-text-4 {
     margin-top: 20px;
-    margin-bottom: initial;
   }
 
   .u-section-2 .u-text-5 {
@@ -312,7 +333,6 @@
     margin-top: 20px;
     margin-right: 0;
     margin-left: 0;
-    margin-bottom: initial;
   }
 
   .u-section-2 .u-group-1 {
@@ -330,21 +350,9 @@
     grid-template-columns: repeat(2, auto);
   }
 
-  .u-section-2 .u-text-3 {
-    margin-bottom: 0;
-  }
-
-  .u-section-2 .u-text-4 {
-    margin-bottom: 0;
-  }
-
   .u-section-2 .u-text-5 {
     margin-right: 0;
     margin-left: 486px;
-  }
-
-  .u-section-2 .u-text-6 {
-    margin-bottom: 60px;
   }
 }
 
